// Credentials and revocations
syntax = "proto3";

package xmtp.mls.message_contents;

import "mls/message_contents/association.proto";

option go_package = "github.com/xmtp/proto/v3/go/mls/message_contents";
option java_package = "org.xmtp.proto.mls.message.contents";

// A declaration and proof that a credential is no longer valid
message CredentialRevocation {
  oneof public_key {
    // The 'installation_public_key' field of the MlsCredential proto
    bytes installation_key = 1;
    // The 'key_bytes' field of the legacy SignedPublicKey proto
    bytes unsigned_legacy_create_identity_key = 2;
  }
  oneof association {
    RevokeMessagingAccessAssociation messaging_access = 3;
  }
}
