// Group membership
syntax = "proto3";

package xmtp.mls.message_contents;

option go_package = "github.com/xmtp/proto/v3/go/mls/message_contents";
option java_package = "org.xmtp.proto.mls.message.contents";

// Contains a mapping of `inbox_id` -> `sequence_id` for all members of a group.
// Designed to be stored in the group context extension of the MLS group
message GroupMembership {
  map<string, uint64> members = 1;
  // List of installations that failed to be added due to errors encountered during the evaluation process.
  repeated bytes failed_installations = 2;
  // List of installations that later recovered (e.g., after uploading new keypacakges) and were successfully re-added.
  repeated bytes recovered_installations = 3;
}
